@@ -1,3 +1,7 @@
+Working:
+- Fix typo in README
+- Add ?empty and ?empty_style to printers of collections
+
 1.3.0 (2020-01-09)
 - Add pp_result and generics
 - Factor signature
